# trial-python-aws-test

./: README.md  pyproject.toml  s3.py  s3_test.py
