[tool.poetry]
name = "trial-python-aws-test"
version = "0.1.0"
description = ""
authors = ["Shunpoco <tkngsnsk313320@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.26"
pytest = "^7.1.2"
moto = "^3.1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
